--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -81,7 +81,7 @@ jobs:
         run: ./vendor/bin/phpunit
 
       - name: run API tests
-        run: make behat-api-quiet
+        run: make behat-api
 
       - name: run JS e2e tests
         run: ./run_behat_tests.sh && make behat-js
