--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ script:
   # run API tests
   - make behat-api-quiet
   # run JS e2e tests
-  - ./run_behat_tests.sh && make behat-js-quiet
+  - make behat-js-quiet
   # Upload Behat logs
   - ./vendor/bin/upload-textfiles "var/log/behat-reports/*.log"
 
