--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ before_script:
   # test if web server works
   - sleep 3
   - wget "http://127.0.0.1:8088/bolt/login"
+  - export PATH=$PATH:$PWD/vendor/bin
 
 script:
   # this checks that the source code follows the Bolt Code Syntax rules
