--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,7 @@
         "behat/mink-selenium2-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
         "behatch/contexts": "^3.2",
+        "bobdenotter/configuration-notices": "^1.0",
         "bobdenotter/weatherwidget": "^1.0",
         "bolt/newswidget": "^1.1",
         "coduo/php-matcher": "^4.0",
