--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "baguettebox.js": "^1.11.1",
     "bootbox": "^5.4.0",
     "bootstrap": "^4.5.0",
-    "codemirror": "^5.53.2",
+    "browserslist": "^4.12.0",
+    "caniuse-lite": "^1.0.30001062",
+    "codemirror": "^5.54.0",
     "dropzone": "^5.7",
     "flagpack": "^1.0.5",
     "jquery": "^3.5.1",
@@ -46,12 +48,12 @@
     "simplemde": "^1.11.2",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-scss": "^3.17.2",
-    "terser": "^4.6.13",
+    "terser": "^4.7",
     "tinycolor2": "^1.4.1",
     "vue": "^2.6.11",
     "vue-flatpickr-component": "^8.1.5",
     "vue-multiselect": "^2.1.6",
-    "vue-simplemde": "^1.0.5",
+    "vue-simplemde": "^1.0",
     "vue-trumbowyg": "^3.6.0",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.4.0",
@@ -64,10 +66,10 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@symfony/webpack-encore": "^0.29.1",
-    "@vue/test-utils": "^1.0.2",
+    "@symfony/webpack-encore": "^0.30.2",
+    "@vue/test-utils": "^1.0.3",
     "ajv-keywords": "^3.4.1",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.5.1",
@@ -83,13 +85,13 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.5",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0",
     "source-sans-pro": "^3.6.0",
     "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0",
     "vue-jest": "^3.0.5",
     "vue-loader": "^15.9.2",
-    "vue-router": "^3.1.6",
+    "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.11",
     "webpackbar": "^4.0.0",
     "workbox-webpack-plugin": "^4.3.1"
