--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -26,7 +26,7 @@ jobs:
           sudo composer self-update -q
       - name: Install dependencies
         run: |
-          sudo COMPOSER_MEMORY_LIMIT=-1 composer update --prefer-dist --no-progress
+          sudo COMPOSER_MEMORY_LIMIT=-1 COMPOSER_PROCESS_TIMEOUT=60 composer update --prefer-dist --no-progress
           ./bin/console bolt:info
           npm set progress=false
           npm ci
