--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -177,6 +177,10 @@ accept_file_types: [ twig, html, js, css, scss, gif, jpg, jpeg, png, ico, zip, t
 
 accept_media_types: [ gif, jpg, jpeg, png, svg, pdf, mp3, tiff ]
 
+# Set the maximum upload size. Note, this can never exceed the settings for
+#`post_max_size` and `upload_max_filesize` in `php.ini`.
+accept_upload_size: 8M
+
 # If you want to brand the Bolt backend for a client, you can change some key
 # variables here, that determine the name of the backend, and adds a primary
 # support/contact link to the footer.  Add a scheme, like `mailto:` or
