--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-mbstring": "*",
         "ext-pdo": "*",
         "api-platform/core": "^2.5",
+        "babdev/pagerfanta-bundle": "^2.4",
         "bolt/common": "^2.1.0",
         "cocur/slugify": "^4.0",
         "composer/composer": "^1.10",
@@ -36,6 +37,7 @@
         "sensio/framework-extra-bundle": "^5.5",
         "sensiolabs/security-checker": "^6.0",
         "siriusphp/upload": "^3.0.1",
+        "squirrelphp/twig-php-syntax": "^1.5",
         "symfony/asset": "^4.4",
         "symfony/console": "^4.4",
         "symfony/debug-bundle": "^4.4",
@@ -67,8 +69,7 @@
         "ua-parser/uap-php": "^3.9",
         "webimpress/safe-writer": "^2.0",
         "webmozart/path-util": "^2.3",
-        "webonyx/graphql-php": "^0.13",
-        "white-october/pagerfanta-bundle": "^1.3"
+        "webonyx/graphql-php": "^0.13"
     },
     "conflict": {
         "symfony/symfony": "*"
