Use new Symfony Error Controller, instead of Twig's old one.

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -29,3 +29,6 @@ framework:
     validation:
         email_validation_mode: 'html5'
         enable_annotations: true
+
+    # Override Symfony's error controller, so we can show custom 404's and 503's
+    error_controller: Bolt\Controller\ErrorController::showAction
