--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -12,5 +12,6 @@ twig:
     globals:
         'config': '@Bolt\Configuration\Config'
 
-    # Override Symfony's error pages (so we can show custom 404's)
-    exception_controller: Bolt\Controller\ExceptionController::showAction
+    # Silence Twig / Symfony's exception controller here, so we can set it up properly in
+    # `framework.yaml` (so we can show custom 404's)
+    exception_controller: ~
