--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "peterkahl/country-code-to-emoji-flag": "^1.2",
         "php-translation/symfony-bundle": "^0.12",
         "phpdocumentor/reflection-docblock": "^4.3",
+        "psr/event-dispatcher": "^1.0",
         "psr/simple-cache": "^1.0",
         "scienta/doctrine-json-functions": "^4.1",
         "sensio/framework-extra-bundle": "^5.5",
