Make Collection Fields iterable

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -105,3 +105,5 @@ services:
     Twig\Extension\StringLoaderExtension: ~
 
     Symfony\Component\ErrorHandler\ErrorRenderer\ErrorRendererInterface: '@error_handler.error_renderer.html'
+
+    Squirrel\TwigPhpSyntax\PhpSyntaxExtension: ~
