--- a/phpstan.neon
+++ b/phpstan.neon
@@ -26,3 +26,5 @@ includes:
 	- vendor/phpstan/phpstan-symfony/extension.neon
 	- vendor/phpstan/phpstan-doctrine/extension.neon
 #    - vendor/thecodingmachine/phpstan-safe-rule/phpstan-safe-rule.neon # make ON when thecodingmachine/safe will get stable
+rules:
+	- Symplify\CodingStandard\Rules\NoDebugFuncCallRule
