Always run behat logs upload

--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -91,3 +91,4 @@ jobs:
 
       - name: Upload Behat logs
         run: ./vendor/bin/upload-textfiles "var/log/behat-reports/*.log"
+        if: always()
