--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -86,6 +86,9 @@ jobs:
       - name: Install latest Google Chrome (for e2e tests)
         run: wget -q https://script.install.devinsideyou.com/google-chrome && chmod +x google-chrome
 
+      - name: run e2e tests with Chrome Mink Driver
+        run: make behat-js-google
+
       - name: run e2e tests
         run: ./run_behat_tests.sh && make behat-js-quiet
 
