--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "cocur/slugify": "^4.0",
         "composer/composer": "^1.10",
         "composer/package-versions-deprecated": "^1.8",
+        "dmore/chrome-mink-driver": "^2.7",
         "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "doctrine/orm": "^2.7",
@@ -91,6 +92,7 @@
         "bolt/newswidget": "^1.1",
         "coduo/php-matcher": "^4.0",
         "dama/doctrine-test-bundle": "^6.2.0",
+        "dmore/behat-chrome-extension": "^1.3",
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "lakion/mink-debug-extension": "^1.2",
         "php-http/httplug-pack": "^1.2",
