--- a/behat.yml
+++ b/behat.yml
@@ -24,7 +24,7 @@ default:
       directory: var/log/behat-reports
       screenshot: true
     Behat\MinkExtension:
-      base_url: http://localhost
+      base_url: http://localhost:8088
       goutte: ~
       browser_name: chrome
       default_session: session_for_tests
