Test updates for SF 5

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -38,9 +38,8 @@
         </testsuite>
     </testsuites>
 
-    <listeners>
-        <!-- it begins a database transaction before every testcase and rolls it back after
-             the test finished, so tests can manipulate the database without affecting other tests -->
-        <listener class="\DAMA\DoctrineTestBundle\PHPUnit\PHPUnitListener" />
-    </listeners>
+    <extensions>
+        <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
+    </extensions>
+
 </phpunit>
