--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -137,12 +137,12 @@ thumbnails:
 # user that PHP (and/or your webserver) is running as, and the user who owns the
 # actual folders/files.
 #
-# - If they are the same user, use `0755` for folders and `0644` for files.
-# - If they're in the same group, use use `0775` for folders and `0664` for files.
-# - If you don't know, or you can't make it work otherwise, then use `0777` for folders and `0666` for files.
+# - If they are the same user, use `0o755` for folders and `0o644` for files.
+# - If they're in the same group, use use `0o775` for folders and `0o664` for files.
+# - If you don't know, or you can't make it work otherwise, then use `0o777` for folders and `0o666` for files.
 filepermissions:
-    folders: 0775
-    files: 0664
+    folders: 0o775
+    files: 0o664
 
 # Define the HTML tags and attributes that are allowed in cleaned HTML. This
 # is used for sanitizing HTML, to make sure there are no undesirable elements
