--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -38,7 +38,7 @@ homepage:
             type: slug
             uses: title
             group: meta
-    viewless: false
+    viewless: true
     taxonomy: [ categories, tags, foobars ]
     locales: ['en', 'nl', 'ja', 'nb']
     singleton: true
