--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -315,7 +315,7 @@ blocks:
             order: title
             label: Select a page
     show_on_dashboard: true
-    viewless: true
+    viewless: false
     searchable: false
     icon_many: "fa:cubes"
     icon_one: "fa:cube"
