--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -68,6 +68,10 @@ homepage_template: index.twig
 # identifiers for records, which will be tried until a match is found.
 notfound: [ blocks/404-not-found, 'helpers/page_404.html.twig' ]
 
+# The default content for the 403 page. Can be an (array of) template names or
+# identifiers for records, which will be tried until a match is found.
+forbidden: [ blocks/403-forbidden, 'helpers/page_403.html.twig' ]
+
 # The default template and amount of records to use for listing-pages on the
 # site.
 #
