--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -1,23 +1,9 @@
-imports:
-    - { resource: 'vendor/symplify/easy-coding-standard/config/set/clean-code.yaml' }
-    - { resource: 'vendor/symplify/easy-coding-standard/config/set/common.yaml' }
-    - { resource: 'vendor/symplify/easy-coding-standard/config/set/php70.yaml' }
-    - { resource: 'vendor/symplify/easy-coding-standard/config/set/php71.yaml' }
-    - { resource: 'vendor/symplify/easy-coding-standard/config/set/psr12.yaml' }
-    - { resource: 'vendor/symplify/easy-coding-standard/config/set/symfony.yaml' }
-    - { resource: 'vendor/symplify/easy-coding-standard/config/set/symfony-risky.yaml' }
-
 services:
     # most of these services are taken from symplify.yml
     # see https://github.com/Symplify/Symplify/blob/master/ecs.yml
 
-    # PHP 5.5
-    Symplify\CodingStandard\Fixer\Php\ClassStringToClassConstantFixer: ~
-
     # Control Structures
-    Symplify\CodingStandard\Fixer\Property\ArrayPropertyDefaultValueFixer: ~
     Symplify\CodingStandard\Fixer\ArrayNotation\StandaloneLineInMultilineArrayFixer: ~
-    Symplify\CodingStandard\Fixer\ControlStructure\RequireFollowedByAbsolutePathFixer: ~
 
     # Spaces
     Symplify\CodingStandard\Fixer\Strict\BlankLineAfterStrictTypesFixer: ~
@@ -83,6 +69,18 @@ services:
     SlevomatCodingStandard\Sniffs\ControlStructures\DisallowYodaComparisonSniff: ~
 
 parameters:
+    sets:
+        - 'clean-code'
+        - 'common'
+        - 'php70'
+        - 'php71'
+        - 'psr12'
+        - 'symfony'
+        - 'symfony-risky'
+
+    paths:
+        - 'src'
+
     cache_directory: var/cache/ecs
     skip:
         PhpCsFixer\Fixer\ClassNotation\OrderedClassElementsFixer: ~
