--- a/composer.json
+++ b/composer.json
@@ -135,12 +135,12 @@
     "prefer-stable": true,
     "scripts": {
         "post-install-cmd": [
-            "php bin/console extensions:copy-configs --with-config",
+            "php bin/console extensions:configure --with-config",
             "@auto-scripts",
             "php bin/console bolt:info"
         ],
         "post-update-cmd": [
-            "php bin/console extensions:copy-configs",
+            "php bin/console extensions:configure",
             "@auto-scripts",
             "php bin/console bolt:info"
         ],
